# Asi2025

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  index.html  log_production_artifact.py  pyproject.toml  styles.css
.pytest_cache/v/cache/: nodeids
asi2025/: README.md  pyproject.toml  requirements.txt
asi2025/tests/: test_run.py
conf/base/: catalog.yml  parameters.yml
css/: styles.css
data/01_raw/: airline_passenger_satisfaction_sample.csv
data/02_interim/: X_test.pkl  X_test_ready.npy  X_train.pkl  X_train_ready.npy  clean.parquet  feature_names.csv  feature_names.pkl  y_test.csv  y_test.pkl  y_train.csv  y_train.pkl
data/03_processed/: X_test.parquet  X_train.parquet  metrics.json  model_baseline.pkl  y_test.parquet  y_train.parquet
docs/: model_card.md
js/: main.js
notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb  02_baseline_sklearn.ipynb
src/api/: db.py  dummy_model.py  main.py  model_loader.py  settings.py
src/asi2025/: pipeline_registry.py
tests/: test_api_integration_db.py  test_api_validation.py  test_smoke.py
wandb/: latest-run
wandb/run-20251029_230031-9rj1zljw/: run-9rj1zljw.wandb
wandb/run-20251029_230357-28yrtkx9/: run-28yrtkx9.wandb
wandb/run-20251029_230414-aelekaav/: run-aelekaav.wandb
wandb/run-20251029_230802-cnrs29oa/: run-cnrs29oa.wandb
wandb/run-20251029_230818-4rpootjd/: run-4rpootjd.wandb
wandb/run-20251030_203808-y6ja874o/: run-y6ja874o.wandb
wandb/run-20251030_203824-my12ipcn/: run-my12ipcn.wandb
wandb/run-20251030_204833-9uetubbg/: run-9uetubbg.wandb
wandb/run-20251030_204849-v2alp7v5/: run-v2alp7v5.wandb
wandb/run-20251030_205420-5lenneco/: run-5lenneco.wandb
wandb/run-20251030_205436-m5ocgkw2/: run-m5ocgkw2.wandb
(+93 files in other folders)
